--- a/gb/16/1/1/n4607939.md
+++ b/gb/16/1/1/n4607939.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/onivku3167/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/onivku3167/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/onivku3167/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/onivku3167/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/onivku3167/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵2016年重返费城 费城市议会褒奖</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/01/1512312139462402-450x681.jpg" />
 <h6>美国费城市议会议长达雷尔?克拉克（Darrell L. Clarke）。（官网图片）
 </h6>
 <hr>
-	<p>【大纪元2016年01月01日讯】（大纪元记者凌浩美国<ahref="https://github.com/onivku3167/djy/blob/master/gb/tag/%E8%B4%B9%E5%9F%8E.md#1">费城</a>报导）神韵2016年全球巡演将抵达费城前夕，费城市议会议长达雷尔?克拉克（Darrell L. Clarke）代表费城市议会为神韵艺术团发出<ahref="https://github.com/onivku3167/djy/blob/master/gb/tag/%E8%A4%92%E5%A5%96.md#1">褒奖</a>，表彰神韵对表演艺术史诗般的贡献，并欢迎神韵艺术团2016年重返<ahref="https://github.com/onivku3167/djy/blob/master/gb/tag/%E8%B4%B9%E5%9F%8E.md#1">费城</a>。之前宾州第7选区美国国会众议员帕特里克?米汉（Patrick Meehan）也特发褒奖信，表彰神韵艺术团“为促进和保护中国古典文化和艺术所展现的承诺”。</p>
-<p>克拉克议长在<ahref="https://github.com/onivku3167/djy/blob/master/gb/tag/%E8%A4%92%E5%A5%96.md#1">褒奖</a>信中说，“今年是第10年，宾州民众能够体验神韵带给世界的精湛技艺和文化教育遗产。数百万人已经体验了神韵每年全新的神奇。在全世界顶级剧院观众们的起立喝采、欧洲皇室成员的观看、在北美的爆满和在亚洲座无虚席的演出，已经让神韵成为了一件国际盛事；神韵实现了他们伟大国家的艺术自由，把古典的传统搬上了现代舞台。神韵通过音乐和舞蹈，展现了五千年中国传统文化的华美与壮丽，每一年度的巡演都具有独特的启发性” 。<br />
-	<figure id="attachment_6550835" style="width: 437px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2016/01/1512312140512402.jpg" alt="在神韵2016年全球巡演将赴费城前夕，费城市议会议长达雷尔?克拉克（Darrell L. Clarke）也代表费城市议会为神韵艺术团发出褒奖，表彰神韵对表演艺术史诗般的贡献，并欢迎神韵艺术团2016年重返费城及祝愿神韵长盛不衰。（大纪元图片）" title="在神韵2016年全球巡演将赴费城前夕，费城市议会议长达雷尔?克拉克（Darrell L. Clarke）也代表费城市议会为神韵艺术团发出褒奖，表彰神韵对表演艺术史诗般的贡献，并欢迎神韵艺术团2016年重返费城及祝愿神韵长盛不衰。（大纪元图片）" width="437" b="600"
-	class="size-large wp-image-6550835" /></a><figcaption class="wp-caption-text">在神韵2016年全球巡演将赴费城前夕，费城市议会议长达雷尔?克拉克（Darrell L. Clarke）也代表费城市议会为神韵艺术团发出褒奖，表彰神韵对表演艺术史诗般的贡献，并欢迎神韵艺术团2016年重返费城及祝愿神韵长盛不衰。（大纪元图片）</figcaption></figure><br />以下是费城市议会为神韵艺术团发出的褒奖信译文：</p>
+	<p>【大纪元2016年01月01日讯】（大纪元记者凌浩美国<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E8%B4%B9%E5%9F%8E.md#1">费城</a>报导）神韵2016年全球巡演将抵达费城前夕，费城市议会议长达雷尔?克拉克（Darrell L. Clarke）代表费城市议会为神韵艺术团发出<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E8%A4%92%E5%A5%96.md#1">褒奖</a>，表彰神韵对表演艺术史诗般的贡献，并欢迎神韵艺术团2016年重返<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E8%B4%B9%E5%9F%8E.md#1">费城</a>。之前宾州第7选区美国国会众议员帕特里克?米汉（Patrick Meehan）也特发褒奖信，表彰神韵艺术团“为促进和保护中国古典文化和艺术所展现的承诺”。</p>
+<p>克拉克议长在<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E8%A4%92%E5%A5%96.md#1">褒奖</a>信中说，“今年是第10年，宾州民众能够体验神韵带给世界的精湛技艺和文化教育遗产。数百万人已经体验了神韵每年全新的神奇。在全世界顶级剧院观众们的起立喝采、欧洲皇室成员的观看、在北美的爆满和在亚洲座无虚席的演出，已经让神韵成为了一件国际盛事；神韵实现了他们伟大国家的艺术自由，把古典的传统搬上了现代舞台。神韵通过音乐和舞蹈，展现了五千年中国传统文化的华美与壮丽，每一年度的巡演都具有独特的启发性” 。<br />
+	<figure id="attachment_6550835" aria-describedby="caption-attachment-6550835" style="width: 437px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/01/1512312140512402.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2016/01/1512312140512402.jpg" alt="在神韵2016年全球巡演将赴费城前夕，费城市议会议长达雷尔?克拉克（Darrell L. Clarke）也代表费城市议会为神韵艺术团发出褒奖，表彰神韵对表演艺术史诗般的贡献，并欢迎神韵艺术团2016年重返费城及祝愿神韵长盛不衰。（大纪元图片）" title="在神韵2016年全球巡演将赴费城前夕，费城市议会议长达雷尔?克拉克（Darrell L. Clarke）也代表费城市议会为神韵艺术团发出褒奖，表彰神韵对表演艺术史诗般的贡献，并欢迎神韵艺术团2016年重返费城及祝愿神韵长盛不衰。（大纪元图片）" width="437" b="600"
+	class="size-large wp-image-6550835" /></a><figcaption id="caption-attachment-6550835" class="wp-caption-text">在神韵2016年全球巡演将赴费城前夕，费城市议会议长达雷尔?克拉克（Darrell L. Clarke）也代表费城市议会为神韵艺术团发出褒奖，表彰神韵对表演艺术史诗般的贡献，并欢迎神韵艺术团2016年重返费城及祝愿神韵长盛不衰。（大纪元图片）</figcaption></figure><br />以下是费城市议会为神韵艺术团发出的褒奖信译文：</p>
 <p><h2>表彰暨赞赏神韵</h2>
 <p>费城市议会高兴和自豪地与费城法轮大法协会一起表彰暨赞赏神韵，并欢迎神韵艺术团重返费城。</p>
 <p>鉴于，费城法轮大法协会志愿者不知疲倦的工作将神韵呈现给宾州民众；且今年是第10年，宾州民众能够体验神韵带给世界的精湛技艺和文化教育遗产。数百万人已经体验了神韵每年全新的神奇。在全世界顶级剧院观众们的起立喝采、欧洲皇室成员的观看、在北美的爆满和在亚洲座无虚席的演出，已经让神韵成为了一件国际盛事；同时</p>
@@ -24,44 +24,37 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/15/12/24/n4602837.md#1">组图：传统与现代交汇 费城圣诞喜气洋洋</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/15/12/24/n4602888.md#1">神韵2016巡演将至费城  国会众议员褒奖</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/15/12/24/n4602937.md#1">神韵德州开演 联邦众议员褒奖“神韵日”</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/16/1/1/n4607954.md#1">《大纪元时报》2015年大费城十大新闻</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/16/1/1/n4607958.md#1">神韵2016巡演火爆登场 费城观众勿失良机</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/16/1/1/n4607977.md#1">《华盛顿邮报》：费城饮食胜纽约华盛顿</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/24/n4602837.md#1">组图：传统与现代交汇 费城圣诞喜气洋洋</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/24/n4602888.md#1">神韵2016巡演将至费城  国会众议员褒奖</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/24/n4602937.md#1">神韵德州开演 联邦众议员褒奖“神韵日”</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/1/n4607954.md#1">《大纪元时报》2015年大费城十大新闻</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/1/n4607958.md#1">神韵2016巡演火爆登场 费城观众勿失良机</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/1/n4607977.md#1">《华盛顿邮报》：费城饮食胜纽约华盛顿</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/22/n10077932.md#1" target="_blank">中国教育的失败源于破坏传统文化及灌输党文化</a></li><li><a href="https://github.com/onivku3167/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/2/n11494526.md#1" target="_blank">英国女士秘鲁探险 偶遇大法后改变人生</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/28/n10879954.md#1" target="_blank">林辉：共产党国家的“作秀公审”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/24/n10998917.md#1" target="_blank">影片：与全世界背道而行 中共为何打击善良</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12621699.md#1">印裔占星师分析 川普未来一个月如何逆转胜</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/9/n12605810.md#1">《诸世纪》预言抽丝剥茧 掀美大选黑幕真相</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/10/n12609444.md#1">【命理】不孝子砸老母 招来雷神诛杀</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/11/n12614366.md#1">尼姑癌症末期意外痊愈 修炼为何能改善疾病？</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/11/27/n12580489.md#1">太学生不识朱元璋 吟诗一首登仕途</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12626810.md#1">【直播预告】挺川灭共站出来 台北游行集会</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12623326.md#1">【罗厨寻味】红烧牛腩</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12628980.md#1">【远见快评 】国家情报总监报告推迟 谁在阻挡？</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12623396.md#1">【新闻看点】拜登当选？川普意想不到“反转”</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12623847.md#1">【新闻大家谈】美国会首次听证 贺锦丽尴尬</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12624296.md#1">店员妹仔破涕为笑 误开400万的发票找到了</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12623272.md#1">曾遭散打冠军老婆家暴 陆男星台上演哭章子怡</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12623537.md#1">疑向中共下跪 梁朝伟漫威角色“满大人”改名</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12625572.md#1">遭小粉红无谓攻击 香港歌手关淑怡发长文怒怼</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12625818.md#1">疑染疫身亡的李偲嫣 曾任张国荣歌迷会会长</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12623055.md#1">范冰冰首谈与李晨分手原因：不想牵连他</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/7/n12600078.md#1">厕所异味有原因！3个清洁妙方除臭又去污垢</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/13/2/9/n3797754.md#1">这种飞蚊症不用怕！2招改善 赶走眼前小黑点</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12624214.md#1">iPhone 6s手机从飞机坠地没坏 拍下整个过程</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12624416.md#1">311大地震被海啸冲走 日本渔船10年后现身</a></li>
-<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12622560.md#1">家里常备10种中药 抗发炎、护肠胃好处说不完</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/onivku3167/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/onivku3167/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/1/1/n4607939.htm">神韵2016年重返费城 费城市议会褒奖</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/1/1/n4607939.htm">神韵2016年重返费城 费城市议会褒奖</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/onivku3167/djy/blob/master/gb/16/1/1/n4607939.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/onivku3167/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/onivku3167/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/onivku3167/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/16/1/1/n4607939.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
